load("@rules_cc//cc:defs.bzl", "cc_library")
load("@build_bazel_rules_android//android:rules.bzl", "android_binary", "android_library")

android_library(
    name = "lib",
    srcs = ["java/dev/pscm/android/MainActivity.java"],
    custom_package = "dev.pscm.android",
    manifest = "LibraryManifest.xml",
    resource_files = glob(["res/**/*"]),
    deps = [
        # ":jni_lib",
        "//binding/java:pscm_java_api",
        # must depend on cc_library directly
        "//binding/java:pscm_java_binding",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
    ],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    manifest_values = {"applicationId": "dev.pscm.android"},
    deps = [":lib"],
)
